[project]
name = "tranzor"
version = "0.1.0"
description = "Transversal Clifford logical circuit generator for color code."
readme = "README.md"
authors = [{ name = "Yiming Zhang", email = "zhangyiming21@mail.ustc.edu.cn" }]
requires-python = ">=3.10"
dependencies = []

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
