[project]
name = "tranzor"
version = "0.1.0"
description = "Transversal Clifford logical circuit generator for color code."
readme = "README.md"
authors = [{ name = "Yiming Zhang", email = "zhangyiming21@mail.ustc.edu.cn" }]
requires-python = ">=3.10"
dependencies = [
  "stim>=1.15",
  "tqec",
  "tqecd>=0.1.2",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.uv.sources]
tqec = { git = "https://github.com/tqec/tqec.git" }

[dependency-groups]
dev = [
    "mypy>=1.16.0",
]
